--- a/version_list.ini
+++ b/version_list.ini
@@ -1,3 +1,3 @@
 [maskeditor]
-version = 15
-message = A new version is avalible!<br>Bug fixes<br><a href='https://drive.google.com/file/d/1kXDxdgMD7vBMr1_sXM8W6AcFxGF0-Krl/view?usp=sharing'>Download now</a>
+version = 16
+message = A new version is avalible!<br>  Fix duplicate classes problem in comboBox <br><a href='https://drive.google.com/file/d/1kXDxdgMD7vBMr1_sXM8W6AcFxGF0-Krl/view?usp=sharing'>Download now</a>
