--- a/version_list.ini
+++ b/version_list.ini
@@ -1,3 +1,3 @@
 [maskeditor]
-version = 16
-message = A new version is avalible!<br>  Fix duplicate classes problem in comboBox <br><a href='https://drive.google.com/file/d/1kXDxdgMD7vBMr1_sXM8W6AcFxGF0-Krl/view?usp=sharing'>Download now</a>
+version = 17
+message = A new version is available, which includes:<br /><ul>	<li>New hotkey binding (map left/right to prev/next)</li>	<li>Appearance adjustments&nbsp;</li>	<li>Default class name now use the first attribute in the annotation</li>	<li>Polygon selection line thickness changes with scale</li>	<li>Bug fixes&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</li></ul><br /><a href="https://drive.google.com/file/d/1kXDxdgMD7vBMr1_sXM8W6AcFxGF0-Krl/view?usp=sharing">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Download now</a>
