--- a/version_list.ini
+++ b/version_list.ini
@@ -1,3 +1,3 @@
 [maskeditor]
-version = 17
-message = A new version is available, which includes:<br /><ul>	<li>New hotkey binding (map left/right to prev/next)</li>	<li>Appearance adjustments&nbsp;</li>	<li>Default class name now use the first attribute in the annotation</li>	<li>Polygon selection line thickness changes with scale</li>	<li>Bug fixes&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;</li></ul><br /><a href="https://drive.google.com/file/d/1kXDxdgMD7vBMr1_sXM8W6AcFxGF0-Krl/view?usp=sharing">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Download now</a>
+version = 18
+message = A version 18 is now available. Changes include:<br /><ul>	<li>Slight improvement in scene loading time</li>	<li>Press right mouse key to grab and move the view</li>	<li>Padding border (can be adjusted in settings)</li>	<li>Hide layers</li>	<li>Bug fixes</li></ul><a href="https://drive.google.com/file/d/1kXDxdgMD7vBMr1_sXM8W6AcFxGF0-Krl/view?usp=sharing" style=" color: rgb(55, 125, 255); text-decoration: none; transition: color 0.2s ease 0s, text-decoration 0.2s ease 0s; font-size: 14px; text-align: left">Download now</a><br />
